headers/IOTCAPIs.h


#define	IOTC_ER_NoERROR								0
#define	IOTC_ER_SERVER_NOT_RESPONSE					-1
#define	IOTC_ER_FAIL_RESOLVE_HOSTNAME				-2
#define IOTC_ER_ALREADY_INITIALIZED                 -3
#define IOTC_ER_FAIL_CREATE_MUTEX                   -4
#define IOTC_ER_FAIL_CREATE_THREAD                  -5
#define IOTC_ER_FAIL_CREATE_SOCKET                  -6
#define IOTC_ER_FAIL_SOCKET_OPT                     -7
#define IOTC_ER_FAIL_SOCKET_BIND                    -8
#define IOTC_ER_UNLICENSE                           -10
#define IOTC_ER_LOGIN_ALREADY_CALLED                -11
#define IOTC_ER_NOT_INITIALIZED                     -12
#define IOTC_ER_TIMEOUT                             -13
#define IOTC_ER_FAIL_GET_LOCAL_IP                   -16
#define IOTC_ER_LISTEN_ALREADY_CALLED               -17
#define IOTC_ER_EXCEED_MAX_SESSION                  -18
#define IOTC_ER_TCP_TRAVEL_FAILED					-32
#define IOTC_ER_TCP_CONNECT_TO_SERVER_FAILED        -33
#define IOTC_ER_EXIT_LISTEN                         -39
#define IOTC_ER_NO_PERMISSION                  		-40
#define	IOTC_ER_NETWORK_UNREACHABLE     			-41
#define IOTC_ER_NO_SERVER_LIST						-44
typedef void (__stdcall *loginInfoCB)(unsigned int nLoginInfo);
P2PAPI_API void IOTC_Set_Max_Session_Number(unsigned int nMaxSessionNum);
P2PAPI_API int IOTC_Initialize(unsigned short nUDPPort, const char* cszP2PHostNamePrimary,
								const char* cszP2PHostNameSecondary, const char* cszP2PHostNameThird,
								const char* cszP2PHostNameFourth);
P2PAPI_API int IOTC_Initialize2(unsigned short nUDPPort);
P2PAPI_API int IOTC_DeInitialize(void);
P2PAPI_API int IOTC_Device_Login(const char *cszUID, const char *cszDeviceName, const char *cszDevicePWD);
P2PAPI_API int IOTC_Get_Login_Info(unsigned int *pnLoginInfo);
P2PAPI_API void IOTC_Get_Login_Info_ByCallBackFn(loginInfoCB pfxLoginInfoFn);
P2PAPI_API int  IOTC_Listen(unsigned int nTimeout);
P2PAPI_API void IOTC_Listen_Exit(void);