src/bindings.rs

extern "C" {
    #[doc = " \\brief Initialize IOTC module"]
    #[doc = ""]
    #[doc = " \\details This function is used by devices or clients to initialize IOTC"]
    #[doc = "\t\t\tmodule and shall be called before\tany IOTC module related"]
    #[doc = "\t\t\tfunction is invoked except for IOTC_Set_Max_Session_Number()."]
    #[doc = "\t\t\t<br>"]
    #[doc = "\t\t\tThe different between this function and IOTC_Initialize() is this"]
    #[doc = "\t\t\tfunction uses following steps to connect masters (1) IP addresses"]
    #[doc = "\t\t\tof master (2) if fails to connect in step 1, resolve predefined"]
    #[doc = "\t\t\tdomain name of masters (3) try to connect again with the resolved"]
    #[doc = "\t\t\tIP address of step 2 if IP is resolved successfully."]
    #[doc = ""]
    #[doc = " \\param nUDPPort [in] Specify a UDP port. Random UDP port is used if it is specified as 0."]
    #[doc = ""]
    #[doc = " \\return #IOTC_ER_NoERROR if initializing successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_RESOLVE_HOSTNAME Cannot resolve masters' host name"]
    #[doc = "\t\t\t- #IOTC_ER_ALREADY_INITIALIZED IOTC module is already initialized"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CREATE_MUTEX Fails to create Mutexs"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CREATE_THREAD Fails to create threads"]
    #[doc = ""]
    #[doc = " \\see IOTC_Initialize(), IOTC_DeInitialize()"]
    #[doc = ""]
    #[doc = " \\attention This function is the key entry to whole IOTC platform, including"]
    #[doc = "\t\t\t\tRDT module and AV module. That means, if you want to use"]
    #[doc = "\t\t\t\tRDT module, users shall still use this function to initialize IOTC"]
    #[doc = "\t\t\t\tmodule before calling RDT_Initialize()."]
    pub fn IOTC_Initialize2(nUDPPort: ::std::os::raw::c_ushort) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Deinitialize IOTC module"]
    #[doc = ""]
    #[doc = " \\details This function will deinitialize IOTC module."]
    #[doc = ""]
    #[doc = " \\return #IOTC_ER_NoERROR if deinitialize successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #IOTC_ER_NOT_INITIALIZED the IOTC module is not initialized yet."]
    #[doc = ""]
    #[doc = " \\see IOTC_Initialize(), IOTC_Initialize2()"]
    #[doc = ""]
    #[doc = " \\attention IOTC_DeInitialize() will automatically close all IOTC sessions"]
    #[doc = "\t\t\t\tin local site while the remote site will find sessions have"]
    #[doc = "\t\t\t\tbeen closed after certain period of time. Therefore, it is"]
    #[doc = "\t\t\t\tsuggested to close all sessions before invoking this function"]
    #[doc = "\t\t\t\tto ensure the remote site and real-time session status."]
    pub fn IOTC_DeInitialize() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by a device to login to IOTC servers"]
    #[doc = ""]
    #[doc = " \\details This function will let a device login to IOTC servers. UID is required"]
    #[doc = "\t\t\twhen login to IOTC servers. The device name and password are applicable"]
    #[doc = "\t\t\tonly in LAN mode when the device cannot login to IOTC servers"]
    #[doc = "\t\t\tdue to network issue."]
    #[doc = ""]
    #[doc = " \\param cszUID [in] The UID of that device login to IOTC servers"]
    #[doc = " \\param cszDeviceName [in] The name of that device, used in LAN mode for clients"]
    #[doc = "\t\t\tto connect"]
    #[doc = " \\param cszDevicePWD [in] The password of that device, used in LAN mode for"]
    #[doc = "\t\t\tclients to connect"]
    #[doc = ""]
    #[doc = " \\return #IOTC_ER_NoERROR if device had obtained server list and sent login packets successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #IOTC_ER_UNLICENSE The UID is not licensed or expired"]
    #[doc = "\t\t\t- #IOTC_ER_NOT_INITIALIZED The IOTC module is not initialized yet"]
    #[doc = "\t\t\t- #IOTC_ER_LOGIN_ALREADY_CALLED The device is already under login process currently"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CREATE_SOCKET Fails to create sockets"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_SOCKET_OPT Fails to set up socket options"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_SOCKET_BIND Fails to bind sockets"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CREATE_THREAD Fails to create threads"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_RESOLVE_HOSTNAME Cannot resolve masters' host name"]
    #[doc = "\t\t\t- #IOTC_ER_TCP_TRAVEL_FAILED Cannot connect to masters in neither UDP nor TCP"]
    #[doc = "\t\t\t- #IOTC_ER_TCP_CONNECT_TO_SERVER_FAILED Cannot connect to IOTC servers in TCP"]
    #[doc = "\t\t\t- #IOTC_ER_NO_PERMISSION The device does not support TCP relay"]
    #[doc = "\t\t\t- #IOTC_ER_SERVER_NOT_RESPONSE IOTC servers have no response"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_GET_LOCAL_IP Fails to get the device's local IP address"]
    #[doc = "\t\t\t- #IOTC_ER_NETWORK_UNREACHABLE Network is unreachable"]
    #[doc = "\t\t\t- #IOTC_ER_NO_SERVER_LIST No IOTC server information while device login"]
    #[doc = ""]
    #[doc = " \\attention (1) This function is a block process. That means this function will return until"]
    #[doc = "\t\t\t\tthe device can login into IOTC servers successfully or some error happens"]
    #[doc = "\t\t\t\tduring the process. It is suggested to use another thread to perform"]
    #[doc = "\t\t\t\tlogin process so that sequential instructions will not blocked. <br><br>"]
    #[doc = "\t\t\t\t(2) Please use IOTC_Get_Login_Info() to check if device really logins"]
    #[doc = " \t\t\t\tinto server successfully."]
    pub fn IOTC_Device_Login(
        cszUID: *const ::std::os::raw::c_char,
        cszDeviceName: *const ::std::os::raw::c_char,
        cszDevicePWD: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by a device to get the login information"]
    #[doc = ""]
    #[doc = " \\details This function gets the login information of a device to IOTC servers."]
    #[doc = ""]
    #[doc = " \\param pnLoginInfo [out] The login info with meanings of following bits"]
    #[doc = "\t\t\t- bit 0: the device is ready for connection by client from LAN if this bit is 1"]
    #[doc = "\t\t\t- bit 1: the device is ready for connection by client from Internet if this bit is 1"]
    #[doc = "\t\t\t- bit 2: if this bit is 1, it means the device has received login"]
    #[doc = "\t\t\t\t\t\tresponse from IOTC servers since IOTC_Get_Login_Info()"]
    #[doc = "\t\t\t\t\t\tis called last time."]
    #[doc = ""]
    #[doc = " \\return The number of fails to login to IOTC servers."]
    #[doc = ""]
    pub fn IOTC_Get_Login_Info(pnLoginInfo: *mut ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by a device to get the login information"]
    #[doc = ""]
    #[doc = " \\details This function gets the login information of a device to IOTC servers. <br>"]
    #[doc = "\t\t\tThe difference of this function and IOTC_Get_Login_Info() is"]
    #[doc = "\t\t\tthis function will set callback function inside IOTC module and"]
    #[doc = "\t\t\tthat callback function will be invoked whenever the login status"]
    #[doc = "\t\t\tof that device is updated from IOTC servers, for example, IOTC"]
    #[doc = "\t\t\tservers response login message to that device or the connection"]
    #[doc = "\t\t\tbetween IOTC servers and that device has been lost."]
    #[doc = ""]
    #[doc = " \\param pfxLoginInfoFn [in] The function pointer to getting login info function"]
    #[doc = ""]
    pub fn IOTC_Get_Login_Info_ByCallBackFn(pfxLoginInfoFn: loginInfoCB);
}
extern "C" {
    #[doc = " \\brief Used by a device to listen connections from clients"]
    #[doc = ""]
    #[doc = " \\details This function is for a device to listen any connection from clients."]
    #[doc = "\t\t\tIf connection is established with the help of IOTC servers, the"]
    #[doc = "\t\t\tIOTC session ID will be returned in this function and then device and"]
    #[doc = "\t\t\tclient can communicate for the other later by using this IOTC session ID."]
    #[doc = ""]
    #[doc = " \\param nTimeout [in] The timeout for this function in unit of millisecond, give 0 means block forever"]
    #[doc = ""]
    #[doc = " \\return IOTC session ID if return value >= 0"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #IOTC_ER_NOT_INITIALIZED The IOTC module is not initialized yet"]
    #[doc = "\t\t\t- #IOTC_ER_EXCEED_MAX_SESSION The number of IOTC sessions has reached maximum in device side"]
    #[doc = "\t\t\t- #IOTC_ER_LISTEN_ALREADY_CALLED The device is already in listen process"]
    #[doc = "\t\t\t- #IOTC_ER_TIMEOUT No connection is established from clients before timeout expires"]
    #[doc = "\t\t\t- #IOTC_ER_EXIT_LISTEN The device stops listening for connections from clients."]
    #[doc = ""]
    #[doc = " \\attention (1) This function is a block process, waiting for following two"]
    #[doc = "\t\t\t\tconditions happens before executing\tsequential instructions"]
    #[doc = "\t\t\t\t(a) any connection from clients is established (b) timeout expires.<br><br>"]
    #[doc = "\t\t\t\t(2) nTimeout has no effect in 8051 platform."]
    pub fn IOTC_Listen(nTimeout: ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by a device to exit listen process"]
    #[doc = ""]
    #[doc = " \\details Since listen process is a block process and that means a device"]
    #[doc = "\t\t\twill wait for following two conditions happens before executing"]
    #[doc = "\t\t\tsequential instructions (1) any connection from clients is established"]
    #[doc = "\t\t\t(2) timeout expires. In some cases, users may want the device to"]
    #[doc = "\t\t\texit listen immediately by this function in another thread before"]
    #[doc = "\t\t\tthe two conditions above happens."]
    pub fn IOTC_Listen_Exit();
}
